--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <img src="./img/banner.png" class="d-block w-100" alt="banner1">
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/banner.png" class="d-block w-100" alt="banner1">
+                    <img src="./img/a caça ao bixo começou!!.png" class="d-block w-100" alt="banner1">
                 </div>
                 <div class="carousel-item">
                     <img src="./img/banner.png" class="d-block w-100" alt="banner1">
@@ -75,60 +75,44 @@
         </div>
     </section>
     <!--Inicio Cards-->
-    <section>
-        <div class="row">
-            <div class="col-3">
-                <div class="card">
-                    <img src="./img/C (1)-PhotoRoom.png-PhotoRoom.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">A.A.T.U.A.</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-dark">Clique aqui</a>
-                    </div>
-                  </div>
+    <section class="container">
+        <div class="card-group">
+            <div class="card">
+                <img class="card-img-top" src="./img/staff c.c.o (8).png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Nova Staff</h5>
+                    <p class="card-text">Acompanhe a nossa publicação da nova STAFF 2023 da Atlética A.A.T.U.A.</p>
+                </div>
             </div>
-            <div class="col-3">
-                <div class="card">
-                    <img src="./img/C (1)-PhotoRoom.png-PhotoRoom.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">A.A.T.U.A.</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-dark">Clique aqui</a>
-                    </div>
-                  </div>
+            <div class="card">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Sobre a Mudança</h5>
+                    <p class="card-text">Por motivos de inclusão, o nome da atlética foi alterado, proporcionando maior
+                        inclusão aos demais cursos de Tecnologia. Todos são bem-vindos!</p>
+                </div>
             </div>
-            <div class="col-3">
-                <div class="card">
-                    <img src="./img/C (1)-PhotoRoom.png-PhotoRoom.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">A.A.T.U.A.</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-dark">Clique aqui</a>
-                    </div>
-                  </div>
-            </div>
-            <div class="col-3">
-                <div class="card">
-                    <img src="./img/C (1)-PhotoRoom.png-PhotoRoom.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">A.A.T.U.A.</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-dark">Clique aqui</a>
-                    </div>
-                  </div>
+            <div class="card">
+                <img class="card-img-top" src="./img/brota.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">A Caça começou!</h5>
+                    <p class="card-text">Cola brota convoca!!! Chamando todos os bixos, calouros vem também. Em breve
+                        nossa integração de bixos e calouros, veterano não vai querer ficar de fora.</p>
+                </div>
             </div>
         </div>
     </section>
     <!--Newsletter-->
-    <section>
+    <section class="container">
 
         <p class="link-danger">Increva-se na nossa Newsletter e fique por dentro das novidades!</p>
         <div class="input-group flex-nowrap">
             <span class="input-group-text" id="addon-wrapping">Inscreva-se</span>
-            <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
-          </div>
+            <input type="text" class="form-control" placeholder="E-mail" aria-label="E-mail"
+                aria-describedby="addon-wrapping">
+        </div>
     </section>
-    
+
 </body>
 
 
