--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="./img/C (1)-PhotoRoom.png-PhotoRoom.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Sobre a Mudança</h5>
                     <p class="card-text">Por motivos de inclusão, o nome da atlética foi alterado, proporcionando maior
