--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <title>Atlética A.A.T.A.U.</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="./CSS/news.css" rel="stylesheet">
+
 </head>
 <!--Inicio Header-->
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <img src="./img/C (1)-PhotoRoom.png-PhotoRoom.png" alt="Logo" width="70" height="70"
-            class="d-inline-block align-text-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
+        <img src="./img/logo sem fundo.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">A.A.T.A.U.</a>
+            <a class="navbar-brand" href="./index.html">A.A.T.A.U.</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Fotos</a>
@@ -41,7 +42,7 @@
 
 <body>
     <!-- Inicio Banner (Carrosel)-->
-    <section>
+    <section class="container">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -74,6 +75,14 @@
             </button>
         </div>
     </section>
+    <!--infos card-->
+    <section class="container">
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="display-4">Novidades da A.A.T.U.A.</h1>
+            </div>
+        </div>
+    </section>
     <!--Inicio Cards-->
     <section class="container">
         <div class="card-group">
@@ -85,7 +94,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="./img/C (1)-PhotoRoom.png-PhotoRoom.png" alt="Card image cap">
+                <img class="card-img-top" src="./img/reuniao.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Sobre a Mudança</h5>
                     <p class="card-text">Por motivos de inclusão, o nome da atlética foi alterado, proporcionando maior
@@ -102,19 +111,189 @@
             </div>
         </div>
     </section>
-    <!--Newsletter-->
+    <!---infos-->
+    <section>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="display-4">Atléticas da unidade III</h1>
+                <p class="lead">Tudo sobre as festas, grupos de estudos, novidades vocês encontram aqui!.</p>
+            </div>
+        </div>
+    </section>
+    <!--Inicio Cards Secundários-->
     <section class="container">
+        <div class="card-group">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="./logo comissao/civil.png" alt="Card image cap">
+                <p></p>
+                <div class="card-body">
+                    <h5 class="card-title">A.A.A.E.C</h5>
+                    <p class="card-text">ASSOCIAÇÃO ATLÉTICA ACADÊMICA ENGENHARIA CIVIL - BEERTORNEIRA.</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="./logo comissao/arquite.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">U.U.A.A.A.A.</h5>
+                    <p class="card-text">ASSOCIAÇÃO ATLÉTICA ACADÊMICA ARQUITETURA E URBANISMO - FIRMITAS.</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="./logo comissao/moda.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">A.A.A.M.U.</h5>
+                    <p class="card-text">ASSOCIAÇÃO ATLÉTICA ACADÊMICA MODA UNIRP - MODA.</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="./logo comissao/Logo-COMUNIRP.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">A.A.A.C.S.</h5>
+                    <p class="card-text">ASSOCIAÇÃO ATLÉTICA ACADÊMICA DE COMUNICAÇÃO SOCIAL - COMUNIRP.</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="./logo comissao/ADS.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">A.A.A.ADS</h5>
+                    <p class="card-text">ASSOCIAÇÃO ATLÉTICA ACADÊMICA ANALISE DESENVOLVIMENTO DE SISTEMAS - ADS.</p>
+                </div>
+            </div>
+        </div>
 
-        <p class="link-danger">Increva-se na nossa Newsletter e fique por dentro das novidades!</p>
-        <div class="input-group flex-nowrap">
-            <span class="input-group-text" id="addon-wrapping">Inscreva-se</span>
-            <input type="text" class="form-control" placeholder="E-mail" aria-label="E-mail"
-                aria-describedby="addon-wrapping">
+
+    </section>
+    <!--Newsletter-->
+    <section class="bg-dark text-center p-5 mt-4" class="container">
+        <div class="container p-3">
+            <h3 class="text-white">Inscreva-se na nossa Newslatter</h3>
+            <form action="#" method="Post">
+                <input type="text" name="text" placeholder="Enter Your Email Id">
+                <button type="button" class="btn btn-default">Confirmar<i class="fa fa-envelope"></i></button>
+            </form>
         </div>
     </section>
 
-</body>
 
+</body>
+<!-- Footer -->
+<footer class="text-center text-lg-start bg-white text-muted">
+    <!-- Section: Social media -->
+    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+        <!-- Left -->
+        <div class="me-5 d-none d-lg-block">
+            <span>Visite nossas redes sociais!</span>
+        </div>
+        <!-- Left -->
+
+        <!-- Right -->
+        <div>
+            <a href="" class="me-4 link-secondary">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="" class="me-4 link-secondary">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="" class="me-4 link-secondary">
+                <i class="fab fa-google"></i>
+            </a>
+            <a href="" class="me-4 link-secondary">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="" class="me-4 link-secondary">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="" class="me-4 link-secondary">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+        <!-- Right -->
+    </section>
+    <!-- Section: Social media -->
+
+    <!-- Section: Links  -->
+    <section class="container">
+        <div class="container text-center text-md-start mt-5">
+            <!-- Grid row -->
+            <div class="row mt-3">
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                    <!-- Content -->
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        <i class="fas fa-gem me-3 text-secondary"></i>Tecnologia UNIRP
+                    </h6>
+                    <p>
+                        Site Prototipo para atléticas da universidade UNIRP <br> Para divulgação e apresentação de eventos.
+                    </p>
+                </div>
+                <!-- Grid column -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <!-- Links -->
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        Atléticas
+                    </h6>
+                    <p>
+                        <a href="#" class="text-reset">A.A.T.A.U.</a>
+                    </p>
+                    <p>
+                        <a href="#" class="text-reset">A.A.A.E.C</a>
+                    </p>
+                    <p>
+                        <a href="#" class="text-reset">U.U.A.A.A.A.</a>
+                    </p>
+                    <p>
+                        <a href="#" class="text-reset">A.A.A.M.U.</a>
+                    </p>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <!-- Links -->
+                    <h6 class="text-uppercase fw-bold mb-4">
+                    </h6>
+                    <p>
+                        <a href="#" class="text-reset">A.A.A.C.S.</a>
+                    </p>
+                    <p>
+                        <a href="#" class="text-reset">A.A.A.ADS</a>
+                    </p>
+                    <p>
+                        <a href="#" class="text-reset"></a>
+                    </p>
+                    <p>
+                        <a href="#" class="text-reset"></a>
+                    </p>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <!-- Links -->
+                    <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+                    <p><i class="fas fa-home me-3 text-secondary"></i>São José do Rio Preto - SP</p>
+                    <p>
+                        <i class="fas fa-envelope me-3 text-secondary">E-mail</i>
+                        atletica.cco@gmail.com
+                    </p>
+                    <p><i class="fas fa-phone me-3 text-secondary"></i>(xx) xxxx-xxxx</p>
+                    <p><i class="fas fa-print me-3 text-secondary"></i>(xx) xxxx-xxxx</p>
+                </div>
+                <!-- Grid column -->
+            </div>
+            <!-- Grid row -->
+        </div>
+    </section>
+    <!-- Section: Links  -->
+
+    <!-- Copyright -->
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
+        © 2023 Copyright:
+        <a class="text-reset fw-bold" href="https://github.com/imansta">Github.com/iMansta</a>
+    </div>
+    <!-- Copyright -->
+</footer>
+<!-- Footer -->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
