--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
                         <i class="fas fa-gem me-3 text-secondary"></i>Tecnologia UNIRP
                     </h6>
                     <p>
-                        Site Prototipo para atléticas da universidade UNIRP <br> Para divulgação e apresentação de eventos.
+                        Site Prototipo para atléticas da universidade UNIRP <br> Para divulgação e apresentação de
+                        eventos.
                     </p>
                 </div>
                 <!-- Grid column -->
