--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <body>
     <!-- Inicio Banner (Carrosel)-->
-    <section class="container">
+    <section>
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
