--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <section>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1 class="display-4">Atléticas da unidade III</h1>
+                <h1 class="display-4">Atléticas UNIRP</h1>
                 <p class="lead">Tudo sobre as festas, grupos de estudos, novidades vocês encontram aqui!.</p>
             </div>
         </div>
@@ -160,9 +160,52 @@
                 </div>
             </div>
         </div>
-
-
     </section>
+
+    <!--Secunda linha cards-->
+
+    <section class="container">
+        <div class="card-group">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="./logo comissao/logo revoada.png" alt="Card image cap">
+                <p></p>
+                <div class="card-body">
+                    <h5 class="card-title">A.A.A.P.U.</h5>
+                    <p class="card-text">ASSOCIAÇÃO ATLÉTICA ACADÊMICA DE PSICOLOGIA UNIRP - REVOADA.</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="./logo comissao/logobiologica.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">A.A.A.C.B.</h5>
+                    <p class="card-text">ASSOCIAÇÃO ATLÉTICA ACADÊMICA DE CIÊNCIAS BIOLÓGICAS UNIRP - CIÊNCIAS  BIOLÓGICAS.</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="./logo comissao/moda.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">A.A.A.M.U.</h5>
+                    <p class="card-text">ASSOCIAÇÃO ATLÉTICA ACADÊMICA MODA UNIRP - MODA.</p>
+                </div>
+
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="./logo comissao/Logo-COMUNIRP.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">A.A.A.C.S.</h5>
+                    <p class="card-text">ASSOCIAÇÃO ATLÉTICA ACADÊMICA DE COMUNICAÇÃO SOCIAL - COMUNIRP.</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="./logo comissao/ADS.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">A.A.A.ADS</h5>
+                    <p class="card-text">ASSOCIAÇÃO ATLÉTICA ACADÊMICA ANALISE DESENVOLVIMENTO DE SISTEMAS - ADS.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!--Newsletter-->
     <section class="bg-dark text-center p-5 mt-4" class="container">
         <div class="container p-3">
@@ -243,7 +286,7 @@
                         <a href="#" class="text-reset">U.U.A.A.A.A.</a>
                     </p>
                     <p>
-                        <a href="#" class="text-reset">A.A.A.M.U.</a>
+                        <a href="#" class="text-reset"></a>
                     </p>
                 </div>
                 <!-- Grid column -->
@@ -251,8 +294,7 @@
                 <!-- Grid column -->
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                     <!-- Links -->
-                    <h6 class="text-uppercase fw-bold mb-4">
-                    </h6>
+                    <h6 class="text-uppercase fw-bold mb-4"></br></h6>
                     <p>
                         <a href="#" class="text-reset">A.A.A.C.S.</a>
                     </p>
@@ -260,7 +302,7 @@
                         <a href="#" class="text-reset">A.A.A.ADS</a>
                     </p>
                     <p>
-                        <a href="#" class="text-reset"></a>
+                        <a href="#" class="text-reset">A.A.A.M.U.</a>
                     </p>
                     <p>
                         <a href="#" class="text-reset"></a>
@@ -274,7 +316,7 @@
                     <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
                     <p><i class="fas fa-home me-3 text-secondary"></i>São José do Rio Preto - SP</p>
                     <p>
-                        <i class="fas fa-envelope me-3 text-secondary">E-mail</i>
+                        <i class="fas fa-envelope me-3 text-secondary">E-mail</i></br>
                         atletica.cco@gmail.com
                     </p>
                     <p><i class="fas fa-phone me-3 text-secondary"></i>(xx) xxxx-xxxx</p>
